--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
+    "solc": "^0.4.18",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
-    "truffle-contract": "^1.1.8",
-    "truffle-solidity-loader": "0.0.8",
+    "truffle-contract": "^3.0.2",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
