--- a/package.json
+++ b/package.json
@@ -54,13 +54,14 @@
     "dotenv": "^2.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-file-download": "^0.3.5",
     "web3": "^0.20.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "testrpc": "ganache-cli -p 7545 -i 5777"
+    "testrpc": "ganache-cli -p 7545 -i 5777 -m 'candy maple cake sugar pudding cream honey rich smooth crumble sweet treat'"
   },
   "jest": {
     "collectCoverageFrom": [
