--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "solc": "^0.4.18",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
-    "truffle-contract": "^3.0.2",
+    "truffle-hdwallet-provider": "0.0.5",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
@@ -55,6 +55,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.5",
+    "truffle-contract": "^3.0.5",
     "web3": "^0.20.4",
     "zeppelin-solidity": "^1.9.0"
   },
